--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-query": "^2.26.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1"
   }
