--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-query": "^2.26.2",
     "react-select": "^3.1.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1"
+    "semantic-ui-react": "^2.0.1",
+    "suneditor-react": "^2.14.6"
   }
 }
