--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
+    "react-minimal-pie-chart": "^8.1.0",
     "react-query": "^2.26.2",
     "react-select": "^3.1.0",
     "semantic-ui-css": "^2.4.1",
