--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "next": "10.0.1",
     "react": "17.0.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "17.0.1",
     "react-icons": "^3.11.0",
     "react-minimal-pie-chart": "^8.1.0",
