--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "start:prod": "node dist/src/main.js"
+    "start": "next start"
     
   },
   "dependencies": {
